[gd_scene load_steps=4 format=3 uid="uid://bq2k5qtmh43dy"]

[ext_resource type="Script" path="res://Actors/Meta/block_item.gd" id="1_rsqiu"]
[ext_resource type="Texture2D" uid="uid://jww8u6nv8rv7" path="res://Sprites/Meta/mushroom_item.png" id="2_rauww"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5uy6"]
size = Vector2(144, 162)

[node name="BlockItem1" type="Node2D"]
script = ExtResource("1_rsqiu")

[node name="Area" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Area"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_y5uy6")
debug_color = Color(0.886275, 0.301961, 0.356863, 0.419608)

[node name="EditorSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(9, 9)
texture = ExtResource("2_rauww")

[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_area_body_exited"]
